--- a/main.html
+++ b/main.html
@@ -10,7 +10,22 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<thead>
+<tr>
+	<th>Roll number</th>
+	<th>Name</th>
+</tr>
+	</thead>
+   <tbody>
+	<tr>
+			<td>Muskan</td>
+			<td>120</td>
+		</tr>
+		<tr>
+			<td>qwerty</td>
+			<td>121</td>
+		</tr>
+	   </tbody>
 </body>
 
 </html>
