--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<table border="1">
 	<thead>
 <tr>
 	<th>Roll number</th>
@@ -26,6 +27,8 @@
 			<td>121</td>
 		</tr>
 	   </tbody>
+	</table>
+		
 </body>
 
 </html>
